2003-03-08  Jon Bright  <jon@siliconcircus.com>
	* win32/read_password.cc (read_password): Now correctly hides 
	password when run in a Windows console.  Does at least enough in
	a MinGW rxvt console to make sure that you can't see the password.
	* win32/process.cc: Change indentation.
	(process_spawn): Log commands executed, as for unix process.cc

2005-03-07  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_diff_restrict.at: New test.
	* testsuite.at: Add it.

2005-03-07  Nathaniel Smith  <njs@codesourcery.com>

	* lua.cc (monotone_spawn_for_lua): Minimal change to get arguments
	in right order.  Still needs hygienic cleanups...
	* tests/t_can_execute.at: Run 'cp' instead of 'touch', because cp
	will actually notice if we pass arguments out of order.
	* testsuite.at: Remove mysterious blank line.
	
2005-03-07  Nathaniel Smith  <njs@codesourcery.com>

	* unix/process.cc (process_spawn): Log command line before
	executing.

2005-03-07  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (kill_redundant_edges): Rename back to...
	(kluge_for_3_ancestor_nodes): ...this.  Go back to only cleaning
	up parents of 3+ parent nodes.
	(analyze_manifest_changes): Take a third argument, of files whose
	ancestry needs splitting.
	(construct_revision_from_ancestry): Make more more complex, in
	order to properly track file identity in merges.

2005-03-05  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (check_sane_history): Typo.
	
2005-03-05  Nathaniel Smith  <njs@codesourcery.com>

	* revision.hh (check_sane_history): Take an app_state instead of a
	database as an argument.
	* database.cc: Pass an app_state instead of a database as its
	argument. 
	* revision.cc (check_sane_history): Update accordingly.  Add a new
	check for merges, that they are creating consistent changesets
	(even when the common ancestor is outside of the usual
	paranoia-checking search depth).

2005-03-05  Nathaniel Smith  <njs@codesourcery.com>
